<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="co.com.jgo.zazul.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="40dp"
        android:paddingBottom="6dp"
        android:orientation="vertical"
        android:background="@drawable/fundo"
        android:weightSum="1">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="301dp"
            android:layout_height="167dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:layout_weight="0.70" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jaune"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:maxLength="15"
            android:textSize="14sp"
            android:text=""
            android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:padding="5dp"
                android:maxLength="10"
                android:textSize="14sp"
                android:text=""
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/log_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/textIcons" />

        <TextView
            android:id="@+id/pim"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/pim"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/imei"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/imei"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/versao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/versao"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>

